# airbyte-dbt-models

./: .gitignore  LICENSE  README.md  changed_files.txt  pyproject.toml
.github/ci/: get_connector.py  get_dbt_vars.py  sample.profiles.yml
.github/workflows/: run_integration_tests.yml
connectors/source_amplitude/: README.md  dbt_project.yml
connectors/source_asana/: README.md  dbt_project.yml
connectors/source_facebook_marketing/: README.md  WIP.md  dbt_project.yml  package-lock.yml  packages.yml
connectors/source_github/: README.md  dbt_project.yml
connectors/source_google_ads/: README.md  dbt_project.yml
connectors/source_hubspot/: README.md  dbt_project.yml
connectors/source_intercom/: README.md  dbt_project.yml
connectors/source_jira/: README.md  dbt_project.yml
connectors/source_klaviyo/: README.md  dbt_project.yml
connectors/source_linkedin_ads/: README.md  dbt_project.yml
connectors/source_mailchimp/: README.md  dbt_project.yml
connectors/source_recharge/: README.md  dbt_project.yml
connectors/source_recurly/: README.md  dbt_project.yml
connectors/source_salesforce/: README.md  dbt_project.yml
connectors/source_shopify/: README.md  dbt_project.yml
connectors/source_snapchat_marketing/: README.md  dbt_project.yml
gainsight-px/: README.md  dbt_project.yaml
github/: README.md  dbt_project.yaml
source-github/: dbt_project.yaml
source-greenhouse/: README.md  dbt_project.yaml
source-linkedin-ads/: README.md  dbt_project.yaml
source-mailchimp/: README.md  dbt_project.yaml
source-zendesk-support/: README.md  dbt_project.yaml
(+1092 files in other folders)
